trabajando en paginas contacto y nosotras

--- a/paginas/nosotras.html
+++ b/paginas/nosotras.html
@@ -46,7 +46,7 @@
 			<hr class="featurette-divider">
 
        		<div class="row featurette">
-          		<div class="col-md-5">
+          		<div class="col-md-7">
             		<h2 class="featurette-heading">Alejandra Pia Nicolosi.
              			<span class="text-muted">Directora.</span>
             		</h2>
@@ -61,17 +61,17 @@
 					comunicacionales (gráfico, audiovisual, radiofónico, multimedial)
 					</p>
           		</div>
-				<div class="col-md-5">
+				<div class="col-md-2">
 				<img class="featurette-image img-fluid pull right" src="../asset/img/1.jpg"alt="fotopia">
 				</div>
         	</div>
 			<hr class="featurette-divider">
 
 			<div class="row featurette">
-			   <div class="col-md-3">
-				<img class="featurette-image img-fluid pull right" src="../asset/img/2.jpg"alt="fotopia">
+			   <div class="col-md-2">
+				<img class="featurette-image img-fluid pull right" src="../asset/img/2.jpg"alt="fotoluz">
 			   </div>
-			 <div class="col-md-5">
+			 <div class="col-md-7">
 				<h2 class="featurette-heading">Luz Squarzon
 					<span class="text-muted">Social Media Manager</span>
 			   </h2>
