ajustes de 4ta entrega

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-xs-12 border">
 							<div class="d-flex justify-content-between">
-								<h4>COMO PENSAMOS </h4>
+								<h4>CÓMO PENSAMOS </h4>
 								<p>Desde Prensopólis Comunicación y Prensa, sabemos qué hacer para que tu proyecto no se pierda invisibilizado en un mar de ofertas culturales; para que trascienda ampliamente el círculo de conocidos y amigos que llegan por medio de la promoción del boca-en-boca. Conocemos el ámbito artístico, trabajamos con periodistas de todos los medios (masivos, alternativos, comunitarios), entendemos la dinámica de las redes sociales, y dialogamos con distintxs críticxs de las artes escénicas.
 
 								<h6>Cada proyecto teatral es único y singular. Nos gusta conocerlo, estudiarlo, analizarlo en sus necesidades particulares, y así poder diseñar la mejor campaña para darlo a conocer. Sabemos cómo lograrlo: tenemos experiencia, método, planificación y, sobre todo, amor por lo que hacemos.</p></h6>
