--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -49,7 +49,7 @@
 				<div class="well well-sm">
 					<form class="form-horizontal" method="post">
 						<fieldset>
-							<legend class="text-center header">Escribinos</legend>
+							<legend class="text-center header">Hablanos de tu obra</legend>
 
 							<div class="form-group">
 								<span class="col-md-1 col-md-offset-2 text-center"><i class="bi bi-person"></i></span>
