--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-xs-12">
 						<nav class="navbar navbar-expand-lg navbar-light bg-light">
-							<a class="navbar-brand" href="#"> <img src="asset/img/logo.png" alt="" width="100" height="100"></a>
+							<a class="navbar-brand" href="#"> <img src="asset/img/logo.png" alt="logopre" width="100" height="100"></a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="PRENSOPOLIS" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
